<resources>
    <string name="app_name">Login</string>

    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="send_link">Send link</string>
    <string name="no_internet">No Internet connection is available</string>
    <string name="login_with_receipt">Login using purchase receipt</string>
    <string name="login_with_magic_link">Login using magic email link</string>
    <string name="login_with_magic_link_success">Please check your e-mail for a login link.</string>

    <string name="error_username_password_invalid">Username/Password invalid</string>
    <string name="error_username_invalid">Please make sure you are logging in with your main username, which should start with \"p\" (e.g. p12345)</string>
    <string name="error_throttled">Too many failed login attempts with this username. Please try again later.</string>
    <string name="error_operation_failed">Failure to Login. Please try again later.</string>
    <string name="error_missing_credentials">You must enter a username and password</string>
    <string name="error_missing_email">You must provide a valid email address</string>
</resources>